feat: comment API
